test-cases/final-dump/bug228-undefined.wybe
resource res:int

def init_res use res { ?res = 2 }

use res in {
    !init_res
    !println(res)
}

!println(res) # error, not defined before use
